--- a/Register.html
+++ b/Register.html
@@ -166,7 +166,8 @@ function Validate(){
     else{
         Re_Pass_Error.innerHTML = ""
     }
-    alert("Register Completed");
+    if(result){
+    alert("Register Completed");}
     return result
     
 }
