--- a/Login.html
+++ b/Login.html
@@ -91,7 +91,8 @@ function Validate(){
   else{
     errPass.innerHTML = ""
   }
-alert("Login Successful");
+    if(result){
+alert("Login Successful");}
     return result
     
 }
