--- a/Login.html
+++ b/Login.html
@@ -91,7 +91,7 @@ function Validate(){
   else{
     errPass.innerHTML = ""
   }
-  if (result){
+  if (result == true){
     alert("Login Successful");
   }
     return result
