--- a/Login.html
+++ b/Login.html
@@ -27,7 +27,7 @@
             <strong><div id="Tulisan_Besars">Login</div></strong>
             <div class="Regis_Button">Don't have JustStore Account? <a href="Register.html">Register</a></div>
             <hr>
-            <form action="https://gary38q.github.io/RentalKuy/" method="POST" onsubmit="return Validate()" class="LoginForm">
+            <form action="index.html" method="POST" onsubmit="return Validate()" class="LoginForm">
                 <div>
                     Email
                     <span><input type="email" name="email" class="form-control input-sm" placeholder="example@mail.com" id="email" ></span>
