--- a/Register.html
+++ b/Register.html
@@ -26,7 +26,7 @@
         <strong><div id="Tulisan_Besar">Register</div></strong>
         <div class="Login_Button">Already have JustStore Account? <a href="Login.html">Login</a></div>
         <hr>
-        <form action="index.html" method="POST" onsubmit="return Validate()" class="RegisForm" enctype="multipart/form-data">
+        <form action="Home.html" method="POST" onsubmit="return Validate()" class="RegisForm" enctype="multipart/form-data">
             <div>
                 Name 
                 <span><input name="nama" type="text" placeholder="Enter Your Name" class="form-control input-sm" id="Name"  required></span>
