--- a/Login.html
+++ b/Login.html
@@ -25,7 +25,7 @@
         <img src="Asset/RentalKuy.png">
         <div class="Login_Form">
             <strong><div id="Tulisan_Besars">Login</div></strong>
-            <div class="Regis_Button">Don't have JustStore Account? <a href="Register.html">Register</a></div>
+            <div class="Regis_Button">Don't have RentalKuy Account? <a href="Register.html">Register</a></div>
             <hr>
             <form action="Home.html" method="POST" onsubmit="return Validate()" class="LoginForm">
                 <div>
