--- a/Register.html
+++ b/Register.html
@@ -24,7 +24,7 @@
     <img src="Asset/RentalKuy.png">
     <div class="Regis_Form">
         <strong><div id="Tulisan_Besar">Register</div></strong>
-        <div class="Login_Button">Already have JustStore Account? <a href="Login.html">Login</a></div>
+        <div class="Login_Button">Already have RentalKuy Account? <a href="Login.html">Login</a></div>
         <hr>
         <form action="Home.html" method="POST" onsubmit="return Validate()" class="RegisForm" enctype="multipart/form-data">
             <div>
