--- a/Login.html
+++ b/Login.html
@@ -13,7 +13,7 @@
         <img class="Logo" src="Asset/RentalKuy.png">
        
         <a href="Login.html">Login/Register</a>
-        <a href="index.html">Home</a> 
+        <a href="index.php">Home</a> 
             <div class="input-group" style="width: 40%; float: right; right: 12%; margin-top: 10px;">
             <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search"
               aria-describedby="search-addon" />
@@ -27,7 +27,7 @@
             <strong><div id="Tulisan_Besars">Login</div></strong>
             <div class="Regis_Button">Don't have RentalKuy Account? <a href="Register.html">Register</a></div>
             <hr>
-            <form action="Home.html" method="POST" onsubmit="return Validate()" class="LoginForm">
+            <form action="Login.php" method="POST" onsubmit="return Validate()" class="LoginForm">
                 <div>
                     Email
                     <span><input type="email" name="email" class="form-control input-sm" placeholder="example@mail.com" id="email" ></span>
@@ -91,10 +91,7 @@ function Validate(){
   else{
     errPass.innerHTML = ""
   }
-  if (result){
-    alert("Login Successful");
-    location.replace('index.html');
-  }
+  
     return result
     
 }
