--- a/Register.html
+++ b/Register.html
@@ -13,7 +13,7 @@
         <img class="Logo" src="Asset/RentalKuy.png">
        
         <a href="Login.html">Login/Register</a>
-        <a href="index.html">Home</a> 
+        <a href="index.php">Home</a> 
             <div class="input-group" style="width: 40%; float: right; right: 12%; margin-top: 10px;">
             <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search"
               aria-describedby="search-addon" />
@@ -26,7 +26,7 @@
         <strong><div id="Tulisan_Besar">Register</div></strong>
         <div class="Login_Button">Already have RentalKuy Account? <a href="Login.html">Login</a></div>
         <hr>
-        <form action="Home.html" method="POST" onsubmit="return Validate()" class="RegisForm" enctype="multipart/form-data">
+        <form action="Register.php" method="POST" onsubmit="return Validate()" class="RegisForm" enctype="multipart/form-data">
             <div>
                 Name 
                 <span><input name="nama" type="text" placeholder="Enter Your Name" class="form-control input-sm" id="Name"  required></span>
@@ -166,9 +166,7 @@ function Validate(){
     else{
         Re_Pass_Error.innerHTML = ""
     }
-    if(result){
-        alert("Register Completed");
-    }
+
     return result
     
 }
